--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.holder
+{
+	display:grid;
+ 	grid-template-rows:repeat(2,200px);
+	grid-template-columns:repeat(2,200px);
+}
+#box
+{
+/*  	background:;  */
+	border:1px solid pink;
+}
